<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidTipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="total_bill">Enter your total bill below:</string>     
    <string name="ten_percent">10%</string>
    <string name="fifteen_percent">15%</string>     
    <string name="twenty_percent">20%</string>   
    <string name="tip_is">Tip is:</string>  

</resources>
